<resources>
    <string name="app_name">Quiz App</string>
    <string name="option_a">option A</string>
    <string name="option_b">option B</string>
    <string name="option_c">option C</string>
    <string name="option_d">option D</string>
    <string name="submit">Submit</string>
    <string name="company">Company ?</string>
    <string name="total_questions">Total Questions</string>
</resources>